--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,8 +16,10 @@ jobs:
         with:
           node-version: 16
       - name: Install dependencies
-        run: npm install
+        run: npm install --no-audit --no-found --no-optional
       - name: Lint
-        run: npm run eslint
-
-
+        run: npm run 
+      - name: Build
+        run: npm run build
+      - name: Test
+        run: npm run test
